--- a/fileManagement/src/main/webapp/WEB-INF/web.xml
+++ b/fileManagement/src/main/webapp/WEB-INF/web.xml
@@ -66,16 +66,6 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>DefaultFolderServlet</display-name>
-    <servlet-name>DefaultFolderServlet</servlet-name>
-    <servlet-class>com.yfl.web.servlet.DefaultFolderServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DefaultFolderServlet</servlet-name>
-    <url-pattern>/DefaultFolderServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
     <display-name>DefaultTreeServlet</display-name>
     <servlet-name>DefaultTreeServlet</servlet-name>
     <servlet-class>com.yfl.web.servlet.DefaultTreeServlet</servlet-class>
@@ -83,5 +73,15 @@
   <servlet-mapping>
     <servlet-name>DefaultTreeServlet</servlet-name>
     <url-pattern>/DefaultTreeServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>TestServlet</display-name>
+    <servlet-name>TestServlet</servlet-name>
+    <servlet-class>com.yfl.web.servlet.TestServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TestServlet</servlet-name>
+    <url-pattern>/TestServlet</url-pattern>
   </servlet-mapping>
 </web-app>
