--- a/fileManagement/src/main/webapp/WEB-INF/web.xml
+++ b/fileManagement/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
-    <url-pattern>*.do</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>CharacterEncodingFilter</filter-name>
