--- a/fileManagement/src/main/webapp/WEB-INF/web.xml
+++ b/fileManagement/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,15 @@
     <dispatcher>REQUEST</dispatcher>
   </filter-mapping>
    -->
+   <!-- 跨域拦截器 -->
+  <filter>
+    <filter-name>cors</filter-name>
+    <filter-class>com.yfl.web.filter.CrossFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>cors</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   <!-- 失效时间 -->
  <!--  <session-config>
   <session-timeout>30</session-timeout>
